remove the gradient stop gaps

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ header {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-image: linear-gradient(to top, rgba(73, 85, 98, .6) 25%, rgba(73, 85, 98, .0) 100%);
+    background-image: linear-gradient(to top, rgba(73, 85, 98, .6), rgba(73, 85, 98, .0));
   }
 
   .btn-ghost {
